<resources>
    <string name="app_name">NavScan</string>
    <string name="navscan" translatable="false">NavScan</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="or_sign_in_with">or\nSign in with</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="not_a_member">Not a Member yet?</string>
    <string name="sign_up_now">Sign up now!</string>
    <string name="show_on_map">Show on Map</string>
    <string name="are_you_interested">Are you interested?</string>
    <string name="description">Description</string>
    <string name="features">Features</string>
    <string name="register">Register</string>
    <string name="sign_in_now">Sign in now!</string>
    <string name="already_a_member">Already a member?</string>
    <string name="sign_up">Sign up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="full_name">Full Name</string>
    <string name="birthday">Birthday</string>

    <string name="facebook_app_id" translatable="false">4574239629288600</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb4574239629288600</string>
    =
    <string name="title_home">Home</string>
    <string name="title_leaderboard">Leaderboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_settings">Settings</string>
    <string name="title_scan">Scan</string>
    <string name="title_store">Store</string>
    <string name="title_edit_profile">Edit Profile</string>
    <!-- Preference Titles -->
    <string name="language_header">Language</string>
    <string name="account_header">My Account</string>

    <string name="account_title">My Account</string>
    <string name="language_title">Language</string>

    <string name="logout_title">Sign out</string>
    <string name="edit_account_title">Edit my account</string>
    <string name="edit_your_name">Edit your Name</string>
    <string name="cancel">Cancel</string>
    <string name="apply">Apply</string>
    <string name="edit_your_password">Edit your Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm new Password</string>
    <string name="confirm_purchase">Confirm Purchase</string>
    <string name="change_your_current_password">Change your current password</string>
    <string name="scans">Scans</string>
    <string name="coins">Coins</string>
    <string name="level">Level</string>
    <string name="experience_points">Experience Points</string>
    <string name="suggested_locations">Suggested Locations</string>
    <string name="exp">Exp</string>
    <string name="name">Name</string>
    <string name="please_scan_the_qr_code_you_found">Please scan the QR Code you found</string>
    <string name="claim_it">Claim it</string>
    <string name="not_enough_coins">Not Enough Coins</string>
    <string name="you_have_to_fill_in_your_full_name">You have to fill in your full name</string>
    <string name="you_have_to_fill_in_your_current_password">You have to fill in your current password</string>
    <string name="you_have_to_fill_in_your_new_password">You have to fill in your new password</string>
    <string name="passwords_dont_match">Passwords don\'t match</string>
    <string name="the_new_password_is_weak">The new password is weak</string>
    <string name="password_change_failed">Password change failed</string>
    <string name="password_changed_successfully">Password changed successfully</string>
    <string name="wrong_password">Wrong Password</string>
    <string name="profile_picture_changed_successfully">Profile picture changed successfully</string>
    <string name="failed_to_change_profile_picture">Failed to change profile picture</string>
    <string name="registration_successful">Registration Successful</string>
    <string name="error_registering_try_again">Error registering. Try again</string>
    <string name="you_have_to_fill_in_your_birthday">You have to fill in your birthday</string>
    <string name="sign_in_failed_try_again">Sign in failed. Try again.</string>
    <string name="authentication_failed">Authentication failed.</string>
    <string name="you_have_to_fill_in_your_email">You have to fill in your email</string>
    <string name="you_have_to_fill_in_your_password">You have to fill in your password</string>
    <string name="you_need_a_stronger_password">You need a stronger password (Minimum length: 6)</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="cant_access_leaderboard">Can\'t access the leaderboard live data right now.</string>
    <string name="cant_continue_without_camera_permission">Can\'t continue without the required permissions for camera</string>
    <string name="cant_continue_without_location_permission">Can\'t continue without the required permissions for location</string>
    <string name="cant_access_store_offers_now">Can\'t access the store offers right now.</string>
    <string name="edit_successful">Edit Successful</string>
    <string name="already_visited">Already Visited</string>
    <string name="you_have_to_enable_location">You have to enable your Location so we are able to confirm that you are near this location</string>
    <string name="too_far_from_location">Too Far from Location</string>
    <string name="congratulation_you_have_claimed_this_item">Congratulations! You have successfully claimed this item.</string>
    <string name="good_job_you_have_earned">"Good Job! You have earned "</string>
    <string name="exp_and">" exp and "</string>
    <string name="_coins">" coins!"</string>
    <string name="view_your_claimed_deal_offers">View your claimed Deal Offers</string>
    <string name="my_claimed_deal_offers">My Claimed Deal Offers</string>
    <string name="no_claimed_offers_found">No claimed offers found</string>

</resources>