<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/language_header">

        <ListPreference
            app:entries="@array/language_entries"
            app:entryValues="@array/language_values"
            app:key="language_key"
            app:title="@string/language_title"
            app:useSimpleSummaryProvider="true"
            app:defaultValue="english"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/account_header">
        <Preference
            app:key="edit_account_key"
            app:title="@string/edit_account_title" />
        <Preference
            app:key="sign_out_key"
            app:title="@string/logout_title" />
    </PreferenceCategory>

</PreferenceScreen>