<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/alert_edit_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="10dp"
    android:paddingVertical="8dp">

    <TextView
        style="@style/TextView28Style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_your_name"
        android:textSize="24sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/alertTilEditName"
        style="@style/TextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/branch_brown"
        app:boxStrokeColor="@color/arizona_greenblue"
        app:passwordToggleTint="@color/branch_brown">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/alertTietEditName"
            style="@style/TextView20Style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/full_name"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/alertBtnChangeNameCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/alertBtnChangeNameApply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/apply" />
    </LinearLayout>
</LinearLayout>