<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/arizona_greenblue"
    android:fitsSystemWindows="true"
    tools:context=".Auth.RegisterFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:scaleType="centerInside"
        android:src="@drawable/world_travel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/rounded_top_corners"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp">

            <TextView
                style="@style/TextView42Style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/navscan" />

            <View
                android:layout_width="120dp"
                android:layout_height="3dp"
                android:background="?android:attr/listDivider"
                android:backgroundTint="#8D6E63" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:divider="@drawable/divider_vertical"
                android:orientation="vertical"
                android:showDividers="middle">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilFullName"
                    style="@style/TextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColorHint="@color/branch_brown"
                    app:boxStrokeColor="@color/arizona_greenblue">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tietFullName"
                        style="@style/TextView20Style"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/full_name"
                        android:inputType="textPersonName" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilBirthday"
                    style="@style/TextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColorHint="@color/branch_brown"
                    app:boxStrokeColor="@color/arizona_greenblue">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tietBirthday"
                        style="@style/TextView20Style"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/birthday"
                        android:inputType="none" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilEmail"
                    style="@style/TextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/branch_brown"
                    app:boxStrokeColor="@color/arizona_greenblue">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tietEmail"
                        style="@style/TextView20Style"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilPassword"
                    style="@style/TextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/branch_brown"
                    app:boxStrokeColor="@color/arizona_greenblue"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/branch_brown">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tietPassword"
                        style="@style/TextView20Style"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilConfirmPassword"
                    style="@style/TextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColorHint="@color/branch_brown"
                    app:boxStrokeColor="@color/arizona_greenblue"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/branch_brown">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tietConfirmPassword"
                        style="@style/TextView20Style"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/confirm_password"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btnSignUp"
                    style="@style/ButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:paddingVertical="20dp"
                    android:text="@string/sign_up"
                    app:layout_constraintStart_toStartOf="parent" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextView16Style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5sp"
                    android:text="@string/already_a_member" />

                <TextView
                    android:id="@+id/tvSignInRegisterFrag"
                    style="@style/TextView16Style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in_now"
                    android:textColor="#1B6EAF" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>